# horus

./: .gitignore  .gitlab-ci.yml  .ouroboros-state.json  .slam-map.json  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DX_PROPOSAL.md  E2E_AUDIT_FINDINGS.md  README.md  ROADMAP-messages-gaps.md  SECURITY.md  TEST_COVERAGE_RESULTS.md  UNIFIED_MANIFEST_REDESIGN.md  auto-sync.sh  horus.toml  horus.yaml  install.sh  rustc-ice-2026-03-15T04_46_04-499595.txt  uninstall.ps1  uninstall.sh  verify.sh
benchmarks/: Cargo.toml  README.md  baseline.json  benchmark_results.json  run_benchmarks.sh
benchmarks/benches/: competitive_comparison.rs  ipc_benchmark.rs  latency_matrix.rs  latency_rigorous.rs  link_performance.rs  network_transport.rs  production_messages.rs  scheduler_ipc_latency.rs  scheduler_jitter.rs  tensor_pool.rs  topic_latency.rs  topic_performance.rs  topic_throughput.rs  zenoh_latency.rs  zenoh_throughput.rs
benchmarks/research/: README.md  analyze.py  requirements.txt  run_all.sh  setup.sh
benchmarks/results/: RESULTS.md  system_info_20260114_022402.json  system_info_20260114_022445.json  system_info_20260114_022455.json
benchmarks/scripts/: check_regression.py  ci_bench.sh  perf_cache.sh  rt_validate.sh
benchmarks/src/: lib.rs  output.rs  platform.rs  stats.rs  timing.rs  tracing.rs
horus/: Cargo.toml  README.md
horus/examples/: 01_hello_node.rs  02_pub_sub.rs  03_multi_rate.rs  04_services.rs  05_realtime.rs  estop_trigger.rs  launch_ctl_send.rs  launch_test_net.rs  launch_test_rust.rs  qa_action_server.rs  qa_blackbox_record.rs  qa_crash_safety.rs  qa_launch_control.rs  qa_launch_planner.rs  qa_launch_vision.rs  qa_pubsub.rs  qa_services_tf.rs
horus/src/: lib.rs  time.rs
horus/tests/: node_macro_edge.rs  test_dx_workflows.rs  test_log_summary_macro.rs  test_node_macro.rs
horus_ai/: Cargo.toml
horus_ai/src/: device.rs  lib.rs
horus_core/: Cargo.toml  README.md  build.rs
horus_core/benches/: cuda_ipc_benchmark.rs  network_bench.rs
horus_core/examples/: atomic_asm_test.rs  atomic_codegen.rs  link_motor_control.rs  link_simple.rs  mixed_communication.rs  network_perf_test.rs  network_production.rs  scheduler_api_patterns.rs  topic_motor_control.rs  topic_spsc_simple.rs  zenoh_multi_robot.rs  zenoh_ros2_bridge.rs
horus_core/fuzz/: Cargo.toml
horus_core/src/: config.rs  driver.rs  error.rs  lib.rs  params.rs  terminal.rs  types.rs  utils.rs
horus_core/tests/: acceptance_hub.rs  acceptance_scheduler.rs  acceptance_topic.rs  action_behavioral.rs  action_cancel_running_goal.rs  action_concurrent.rs  action_error_paths.rs  action_macro_regression.rs  action_preemption.rs  action_queued_goal.rs  action_runtime.rs  actions_cross_process.rs  actions_integration.rs  actions_root.rs  async_executor_paths.rs  auto_detection_integration.rs  autonomous_robot_application.rs  backend_detection.rs  blackbox_intent.rs  blackbox_record_replay.rs  blackbox_root.rs  chaos_cross_process.rs  chaos_monkey.rs  chaos_xp_schedulers.rs  cli_qa_full.rs  cli_runtime_integration.rs  cli_user_api.rs  compute_executor_paths.rs  coverage_gaps.rs  crash_recovery.rs  cross_language_ipc.rs  cross_module_integration.rs  cross_process_crash_recovery.rs  cross_process_fanout_shm.rs  cross_process_fanout_spill.rs  cross_process_image.rs  cross_process_image_debug.rs  cross_process_infrastructure.rs  cross_process_ipc.rs  cross_process_late_subscriber.rs  (+140 more)
horus_cpp/: Cargo.toml  README.md  TESTING.md  build.rs
horus_cpp/benches/: ffi_bench.rs
horus_cpp/examples/: CMakeLists.txt  camera_publisher.cpp  launch.yaml  multi_node.cpp  obstacle_avoidance.cpp  params_demo.cpp  pub_sub_demo.cpp  transform_frames.cpp
horus_cpp/fuzz/: Cargo.toml
horus_cpp/loom_tests/: Cargo.toml
horus_cpp/src/: action_ffi.rs  c_api.rs  e2e_tests.rs  json_service.rs  layout_tests.rs  lib.rs  node_ffi.rs  params_ffi.rs  pool_ffi.rs  roundtrip_tests.rs  scheduler_ffi.rs  service_ffi.rs  topic_ffi.rs  transform_ffi.rs  types_ffi.rs
horus_cpp/tests/: CMakeLists.txt  cpp_action_server_test.cpp  cpp_all_types_test.cpp  cpp_benchmark.cpp  cpp_e2e_test.cpp  cpp_ergonomic_e2e.cpp  cpp_fault_injection.cpp  cpp_full_api_test.cpp  cpp_live_node.cpp  cpp_service_server_test.cpp  cpp_soak_test.cpp  cpp_stress_test.cpp  cpp_user_api_test.cpp  cross_lang_cpp_pub.cpp  cross_lang_tri_test.sh  cross_process_action_client.cpp  cross_process_action_server.cpp  cross_process_ipc_test.cpp  cross_process_json_ipc.cpp  cross_process_multi_type.cpp  cross_process_pub.cpp  cross_process_sub.cpp  cross_process_svc_client.cpp  cross_process_svc_server.cpp  proptest_ffi.rs  python_to_cpp_test.py
horus_cpp_macros/: Cargo.toml
horus_cpp_macros/src/: cpp_gen.rs  cxx_gen.rs  integration_tests.rs  lib.rs  parser.rs  types.rs
horus_cpp_macros/tests/: trybuild.rs
horus_library/: Cargo.toml  lib.rs  simulation.rs  topic_convention.rs
horus_library/drivers/: factory.rs  mod.rs
horus_library/hframe/: bench.rs  builder.rs  config.rs  core.rs  messages.rs  mod.rs  query.rs  registry.rs  slot.rs  transform.rs  types.rs
horus_library/messages/: audio.rs  clock.rs  cmd_vel.rs  compat.rs  control.rs  coordination.rs  detection.rs  detection_pod.rs  diagnostics.rs  force.rs  geometry.rs  joystick_msg.rs  keyboard_input_msg.rs  landmark.rs  ml.rs  mod.rs  navigation.rs  perception.rs  pointcloud.rs  pointcloud_pod.rs  segmentation.rs  segmentation_pod.rs  sensor.rs  simulation.rs  tensor.rs  tensor_depth.rs  tensor_image.rs  tensor_pointcloud.rs  timing.rs  tracking.rs  vision.rs
horus_library/nodes/: README.md  README.md.bak  mod.rs  processor.rs
horus_library/python/: Cargo.toml  pyproject.toml
horus_library/tests/: cross_language_parity.rs  (+17 more)
horus_macros/: Cargo.toml  README.md
horus_manager/: Cargo.toml  README.md
horus_net/: Cargo.toml
horus_perception/: Cargo.toml
horus_py/: .gitignore  ASYNC_IO.md  Cargo.toml  LICENSE  README.md  SOFT_REALTIME.md  coverage.xml  pyproject.toml
horus_ros2_bridge/: Cargo.toml
horus_router/: Cargo.toml
horus_sys/: Cargo.toml
horus_types/: Cargo.toml
(+1148 files in other folders)
