[workspace]
resolver = "2"
members = [
    "horus",  # Main unified crate
    "horus_core",
    "horus_macros",
    "horus_cpp_macros",  # C++ binding codegen (#[horus_api] proc macro)
    "horus_cpp",         # C++ FFI bridge (CXX, staticlib+cdylib)
    "horus_manager",
    "horus_types",  # Universal IPC types (math, diagnostics, time, generic)
    "horus_net",  # Transparent LAN replication (zero external deps)
    "horus_sys",  # Platform abstraction layer
    "benchmarks",
    "horus_py",
]
exclude = [
    ".horus",  # Exclude horus run temporary workspace
    "*/.horus",
    "**/.horus",
    "tests/*/.horus",
]

[workspace.package]
rust-version = "1.92"

[workspace.dependencies]
# HORUS dependencies
horus = { path = "horus" }
horus_core = { path = "horus_core" }
horus_macros = { path = "horus_macros" }
horus_cpp_macros = { path = "horus_cpp_macros" }
horus_cpp = { path = "horus_cpp" }
horus_sys = { path = "horus_sys" }
horus_types = { path = "horus_types" }
horus_net = { path = "horus_net" }
# Physics and math
rapier2d = "0.22"
nalgebra = "0.33"

# Rendering (optional, for sim2d visualization)
bevy = { version = "0.15", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_ui", "bevy_text", "bevy_gizmos", "png"] }

# Serialization and config
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
ron = "0.8"

# URDF parsing
urdf-rs = "0.9"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "std"] }
clap = { version = "4.0", features = ["derive"] }

# Async and concurrency
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System utilities
memmap2 = "0.9"
parking_lot = "0.12"
bytemuck = { version = "1.0", features = ["derive"] }

# Testing
approx = "0.5"

# ─── Workspace Lints ──────────────────────────────────────────────────────────
# Prevent stub tests and common test quality issues across all crates.
[workspace.lints.clippy]
# `let _ = expr` is the idiomatic Rust acknowledgment of discarding a Result.
# The rust-level `unused_must_use` lint catches bare expressions without `let _`.
let_underscore_must_use = "allow"
# Catch `assert!(result.is_ok())` — prefer unwrap() or match for better errors
assertions_on_result_states = "warn"
# Common patterns in test code that are acceptable
needless_range_loop = "allow"
field_reassign_with_default = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
single_match = "allow"
while_let_loop = "allow"
unnecessary_get_then_check = "allow"

[workspace.lints.rust]
# Allow unused Results from scheduler.add().build() in tests
unused_must_use = "allow"
# Allow loom cfg in horus_core
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(feature, values("softmata-compat"))'] }

# ─── Patch Section ───────────────────────────────────────────────────────────
# horus-robotics and horus-tf are git deps that reference horus_core via relative
# path (path = "../horus/horus_core"). When used as git deps in this workspace,
# we need to patch their transitive dependency to point to our local horus_core.
[patch."https://gitlab.com/softmata/horus-robotics.git"]
horus_core = { path = "horus_core" }
horus_types = { path = "horus_types" }
horus_macros = { path = "horus_macros" }

[patch."https://gitlab.com/softmata/horus-tf.git"]
horus_core = { path = "horus_core" }
horus_macros = { path = "horus_macros" }

# Enable LTO for release builds (affects all packages)
# Use "thin" LTO for faster builds or "fat" for smallest size
[profile.release]
lto = "thin"
