[package]
name = "horus_benchmarks"
version = "0.1.7"
edition = "2021"
authors = ["HORUS Team"]
description = "Performance benchmarks for HORUS robotics framework"
license = "Apache-2.0"

[lib]
name = "horus_benchmarks"
path = "src/lib.rs"

# =============================================================================
# PERFORMANCE BENCHMARKS
# Run with: cargo run --release -p horus_benchmarks --bin <name>
# =============================================================================

[[bin]]
name = "all_paths_latency"
path = "src/bin/performance/all_paths_latency.rs"
doc = true

[[bin]]
name = "cross_process_benchmark"
path = "src/bin/performance/cross_process_benchmark.rs"
doc = true

[[bin]]
name = "robotics_messages_benchmark"
path = "src/bin/performance/robotics_messages_benchmark.rs"
doc = true

[[bin]]
name = "determinism_benchmark"
path = "src/bin/performance/determinism_benchmark.rs"
doc = true

[[bin]]
name = "scalability_benchmark"
path = "src/bin/performance/scalability_benchmark.rs"
doc = true

[[bin]]
name = "pod_benchmark"
path = "src/bin/performance/pod_benchmark.rs"
doc = true

[[bin]]
name = "backend_latency_benchmark"
path = "src/bin/performance/backend_latency_benchmark.rs"
doc = true

[[bin]]
name = "dds_comparison_benchmark"
path = "src/bin/performance/dds_comparison_benchmark.rs"
doc = true

[dependencies]
horus = { path = "../horus" }
horus_core = { path = "../horus_core" }
horus_library = { path = "../horus_library" }
bytemuck = { version = "1.24", features = ["derive"] }
serde.workspace = true
serde_json = "1.0"
serde_bytes = "0.11"
serde_arrays = "0.1"
colored = "2.0"
anyhow = "1.0"
libc = "0.2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
flume = "0.11"

[features]
default = []
# Enable actual DDS middleware comparisons (requires CycloneDDS/FastDDS installed)
dds = []
