[package]
name = "horus_benchmarks"
version = "0.1.8"
edition = "2021"
authors = ["HORUS Team"]
description = "Performance benchmarks for HORUS robotics framework"
license = "Apache-2.0"

[lib]
name = "horus_benchmarks"
path = "src/lib.rs"

# =============================================================================
# PERFORMANCE BENCHMARKS
# Run with: cargo run --release -p horus_benchmarks --bin <name>
# =============================================================================

[[bin]]
name = "cross_process_benchmark"
path = "src/bin/cross_process_benchmark.rs"

[[bin]]
name = "robotics_messages_benchmark"
path = "src/bin/robotics_messages_benchmark.rs"

[[bin]]
name = "determinism_benchmark"
path = "src/bin/determinism_benchmark.rs"

[[bin]]
name = "scalability_benchmark"
path = "src/bin/scalability_benchmark.rs"

[[bin]]
name = "dds_comparison_benchmark"
path = "src/bin/dds_comparison_benchmark.rs"

[[bin]]
name = "all_paths_latency"
path = "src/bin/all_paths_latency.rs"

[[bin]]
name = "zenoh_benchmark"
path = "src/bin/zenoh_benchmark.rs"
required-features = ["zenoh"]

[dependencies]
horus = { path = "../horus" }
horus_core = { path = "../horus_core" }
horus_library = { path = "../horus_library" }
tokio = { version = "1.0", features = ["full"] }
bytemuck = { version = "1.24", features = ["derive"] }
serde.workspace = true
serde_json = "1.0"
serde_bytes = "0.11"
serde_arrays = "0.1"
colored = "2.0"
anyhow = "1.0"
libc = "0.2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
flume = "0.11"

[features]
default = []
# Enable actual DDS middleware comparisons (requires CycloneDDS/FastDDS installed)
dds = []
# Enable Zenoh transport benchmarks
zenoh = ["horus_core/zenoh-transport"]

# =============================================================================
# CRITERION BENCHMARKS
# Run with: cargo bench
# =============================================================================

[[bench]]
name = "topic_latency"
harness = false

[[bench]]
name = "topic_throughput"
harness = false
