[package]
name = "horus_benchmarks"
version = "0.2.0"
edition = "2021"
authors = ["HORUS Team"]
description = "Performance benchmarks for HORUS robotics framework"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
name = "horus_benchmarks"
path = "src/lib.rs"

# =============================================================================
# PERFORMANCE BENCHMARKS
# Run with: cargo run --release -p horus_benchmarks --bin <name>
# =============================================================================

[[bin]]
name = "cross_process_benchmark"
path = "src/bin/cross_process_benchmark.rs"

[[bin]]
name = "robotics_messages_benchmark"
path = "src/bin/robotics_messages_benchmark.rs"

[[bin]]
name = "determinism_benchmark"
path = "src/bin/determinism_benchmark.rs"

[[bin]]
name = "scalability_benchmark"
path = "src/bin/scalability_benchmark.rs"

[[bin]]
name = "dds_comparison_benchmark"
path = "src/bin/dds_comparison_benchmark.rs"

[[bin]]
name = "raw_baselines"
path = "src/bin/raw_baselines.rs"

[[bin]]
name = "research_latency"
path = "src/bin/research_latency.rs"

[[bin]]
name = "research_throughput"
path = "src/bin/research_throughput.rs"

[[bin]]
name = "research_jitter"
path = "src/bin/research_jitter.rs"

[[bin]]
name = "research_scalability"
path = "src/bin/research_scalability.rs"

[[bin]]
name = "competitor_comparison"
path = "src/bin/competitor_comparison.rs"

[[bin]]
name = "all_paths_latency"
path = "src/bin/all_paths_latency.rs"

[[bin]]
name = "fanout_bench"
path = "src/bin/fanout_bench.rs"

[[bin]]
name = "fanout_shm_bench"
path = "src/bin/fanout_shm_bench.rs"

[[bin]]
name = "ipc_mpmc_bench"
path = "src/bin/ipc_mpmc_bench.rs"
required-features = ["iceoryx2"]

[[bin]]
name = "iceoryx2_comparison"
path = "src/bin/iceoryx2_comparison.rs"
required-features = ["iceoryx2"]

[dependencies]
horus = { path = "../horus" }
horus_core = { path = "../horus_core" }
horus_types = { path = "../horus_types" }
horus-robotics = { git = "https://github.com/softmata/horus-robotics.git" }
bytemuck = { version = "1.24", features = ["derive"] }
serde.workspace = true
serde_json = "1.0"
serde_arrays = "0.1"
anyhow = "1.0"
libc = "0.2"
zenoh = { version = "1.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
rand = "0.8"
chrono = { workspace = true }
num_cpus = "1.16"
iceoryx2 = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
flume = "0.11"

[features]
default = []
# Enable actual DDS middleware comparisons (requires CycloneDDS/FastDDS installed)
dds = []
# Enable Zenoh comparison (requires zenoh crate)
zenoh = ["dep:zenoh", "dep:tokio"]
# Enable iceoryx2 comparison benchmark
iceoryx2 = ["dep:iceoryx2"]

# =============================================================================
# CRITERION BENCHMARKS
# Run with: cargo bench
# =============================================================================

[[bench]]
name = "topic_latency"
harness = false

[[bench]]
name = "topic_throughput"
harness = false

[[bench]]
name = "scheduler_jitter"
harness = false

[[bench]]
name = "scheduler_ipc_latency"
harness = false

[[bench]]
name = "tensor_pool"
harness = false
