[package]
name = "horus"
version = "0.1.9"
edition = "2021"
authors = ["HORUS Team"]
description = "HORUS - Hybrid Optimized Robotics Unified System framework for Rust"
license = "Apache-2.0"
repository = "https://github.com/softmata/horus"
keywords = ["robotics", "ros", "ipc", "real-time", "framework"]
categories = ["science::robotics", "embedded", "network-programming"]

[dependencies]
# Core HORUS components
horus_core = { path = "../horus_core" }
horus_macros = { path = "../horus_macros", optional = true }
horus_library = { path = "../horus_library" }
horus_types = { workspace = true }

# Re-export commonly used dependencies
serde = { workspace = true }

[features]
# ============================================================================
# DEFAULT FEATURES
# ============================================================================
# HORUS ships minimal by default - fast IPC via shared memory.
# For multi-robot networking: horus pkg install horus-ros2
default = ["macros", "telemetry", "blackbox"]

macros = ["dep:horus_macros"]

# ============================================================================
# MONITORING
# ============================================================================

# Telemetry export for live monitoring (HTTP, UDP, file)
telemetry = ["horus_core/telemetry"]

# Black box flight recorder for post-mortem crash analysis
blackbox = ["horus_core/blackbox"]

# ============================================================================
# DISCOVERY
# ============================================================================

# Zero-config peer discovery via mDNS/DNS-SD
mdns = ["horus_core/mdns"]

# ============================================================================
# GPU
# ============================================================================

# CUDA IPC for cross-process GPU memory sharing
cuda = ["horus_core/cuda"]

[lib]
name = "horus"
path = "src/lib.rs"
