[package]
name = "horus"
version = "0.2.0"
edition = "2021"
authors = ["HORUS Team"]
description = "HORUS - Hybrid Optimized Robotics Unified System framework for Rust. 575x faster than ROS2 with sub-microsecond IPC, deterministic scheduling, and zero-copy shared memory."
license = "Apache-2.0"
repository = "https://github.com/softmata/horus"
homepage = "https://horusrobotics.dev"
documentation = "https://docs.horusrobotics.dev"
keywords = ["robotics", "ros", "ipc", "real-time", "framework"]
categories = ["science::robotics", "embedded", "network-programming"]

[dependencies]
# Core HORUS components
horus_core = { path = "../horus_core" }
horus_macros = { path = "../horus_macros", optional = true }
horus_types = { path = "../horus_types" }
horus_net = { path = "../horus_net", optional = true }
# Re-export commonly used dependencies
serde = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
# Link-time hook registration (registers horus_net auto-wire into horus_core scheduler)
ctor = "0.2"

[features]
# ============================================================================
# DEFAULT FEATURES
# ============================================================================
# HORUS ships minimal by default - fast IPC via shared memory.
# Multi-robot LAN replication is opt-in: build with `--features net`
# (or `horus pkg install horus-ros2` for the ROS2 bridge).
default = ["macros", "telemetry", "blackbox"]

# LAN replication — transparent cross-machine topic sharing (opt-in).
# When enabled, replication auto-starts on scheduler.run(); disable at
# runtime with `.network(false)` or HORUS_NET_ENABLED=false.
net = ["dep:horus_net"]

macros = ["dep:horus_macros"]

# ============================================================================
# MONITORING
# ============================================================================

# Telemetry export for live monitoring (HTTP, UDP, file)
telemetry = ["horus_core/telemetry"]

# Black box flight recorder for post-mortem crash analysis
blackbox = ["horus_core/blackbox"]

# ============================================================================
[lints]
workspace = true

[lib]
name = "horus"
path = "src/lib.rs"
