[package]
name = "horus_ai"
version = "0.1.9"
edition = "2021"
rust-version.workspace = true
description = "HORUS AI/ML tensor system with DLPack interop"
license = "Apache-2.0"

[dependencies]
# Core HORUS
horus_core = { workspace = true }
horus_library = { workspace = true }
horus_types = { workspace = true }

# Memory safety
bytemuck = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Serialization (for model registry YAML)
serde = { workspace = true }
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }

# ML model management
sha2 = "0.10"
dirs = "5.0"

# HTTP client for model downloading (optional)
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

[dev-dependencies]
approx = { workspace = true }
