[package]
name = "horus_core"
version = "0.1.8"
edition = "2021"

[lib]
name = "horus_core"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
libc = "0.2"
memmap2 = "0.9"
paste = "1.0"  # For macro identifier concatenation
core_affinity = "0.8"  # CPU core pinning
crossbeam = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
serde.workspace = true
serde_json.workspace = true
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
regex = "1.10"
toml = "0.8"
bincode = "1.3"
bytemuck = { workspace = true }
bumpalo = { version = "3.14", features = ["collections"] }
ctrlc = "3.4"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde", "std"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
lazy_static = "1.4"
flate2 = "1.0"  # Compression for record/replay
sha2 = "0.10"   # SHA256 checksums for model verification

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TLS/Security (optional)
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rcgen = { version = "0.13", optional = true }  # For self-signed certs
x509-parser = { version = "0.16", optional = true }  # Certificate parsing for validity checks
hex = { version = "0.4", optional = true }  # Hex encoding for certificate fingerprints

# QUIC transport (optional)
quinn = { version = "0.11", optional = true }

# Macros (optional)
horus_macros = { path = "../horus_macros", optional = true }

# HTTP client for model downloading and Husarnet API (optional)
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

# Async utilities (optional, needed by zenoh-transport)
futures = { version = "0.3", optional = true }

# Zenoh transport (optional)
zenoh = { version = "1.0", optional = true }

# mDNS service discovery (optional)
mdns-sd = { version = "0.11", optional = true }


# Dynamic plugin loading (optional)
libloading = { workspace = true, optional = true }

# Serialization formats for Zenoh (optional)
cdr-encoding = { version = "0.10", optional = true }  # ROS2/DDS CDR format
byteorder = { version = "1.5", optional = true }      # For CDR byte order
rmp-serde = { version = "1.3", optional = true }      # MessagePack format

# Platform-specific: Windows shared memory
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_Security", "Win32_System_Threading"] }

# Platform-specific: Linux io_uring (optional)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3.0"

# Benchmarks are currently disabled
# Uncomment to enable:
# [[bench]]
# name = "cuda_ipc_benchmark"
# harness = false
# required-features = ["cuda"]

# [[bench]]
# name = "network_bench"
# harness = false

[features]
default = ["macros"]
macros = ["horus_macros"]

# ============================================================================
# Security & Transport Features
# ============================================================================

# TLS encryption for secure TCP connections
# Dependencies: rustls, tokio-rustls, rustls-pemfile, rcgen, x509-parser, hex
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "rcgen", "x509-parser", "hex"]

# QUIC transport (multiplexed UDP streams with built-in TLS 1.3)
# Dependencies: quinn, rustls, rcgen
quic = ["quinn", "rustls", "rcgen"]

# ============================================================================
# Performance Features
# ============================================================================

# Linux io_uring for lowest possible latency network I/O (Linux 5.6+ only)
io-uring-net = ["io-uring"]

# CUDA IPC for cross-process GPU memory sharing (requires NVIDIA GPU)
cuda = []

# ============================================================================
# Zenoh Transport (Multi-Robot & ROS2 Interop)
# ============================================================================
#
# Feature Hierarchy:
#   zenoh-transport (base) → zenoh-ros2 (adds CDR format)
#
# Usage:
#   - For HORUS-only multi-robot: use `zenoh-transport`
#   - For ROS2 interop: use `zenoh-ros2` + `horus_ros2_bridge` crate
#
# Wire Formats:
#   - zenoh-transport: MessagePack (compact, fast)
#   - zenoh-ros2: CDR (ROS2/DDS compatible)

# Base Zenoh support for multi-robot mesh networking
# Includes: Peer/Client/Router modes, MessagePack serialization, HybridBackend
zenoh-transport = ["zenoh", "rmp-serde", "futures"]

# Zenoh with ROS2 CDR wire format compatibility
# Requires: zenoh-transport (automatically enabled)
# Note: For full ROS2 services/actions, also use horus_ros2_bridge crate
zenoh-ros2 = ["zenoh-transport", "cdr-encoding", "byteorder"]

# ============================================================================
# Discovery & Connectivity
# ============================================================================

# mDNS/DNS-SD for automatic peer discovery on local networks
mdns = ["mdns-sd"]

# Husarnet VPN integration for secure WAN connectivity
# Enables Husarnet API client for peer discovery and routing
husarnet = ["reqwest"]

# ============================================================================
# Plugin System
# ============================================================================

# Dynamic driver plugin loading via .so/.dll/.dylib
dynamic-plugins = ["libloading"]
