[package]
name = "horus_core"
version = "0.1.9"
edition = "2021"

[lib]
name = "horus_core"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
libc = "0.2"
memmap2 = "0.9"
paste = "1.0"  # For macro identifier concatenation
core_affinity = "0.8"  # CPU core pinning
crossbeam = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
serde.workspace = true
serde_json.workspace = true
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
regex = "1.10"
toml = "0.8"
bincode = "1.3"
bytemuck = { workspace = true }
bumpalo = { version = "3.14", features = ["collections"] }
ctrlc = "3.4"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde", "std"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
lazy_static = "1.4"
flate2 = "1.0"  # Compression for record/replay
sha2 = "0.10"   # SHA256 checksums for model verification

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Core types (leaf crate)
horus_types = { workspace = true }

# Macros (optional)
horus_macros = { path = "../horus_macros", optional = true }

# mDNS service discovery (optional)
mdns-sd = { version = "0.11", optional = true }


# Platform-specific: Windows shared memory
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3.0"
loom = "0.7"

[features]
default = ["macros"]
macros = ["horus_macros"]

# CUDA IPC for cross-process GPU memory sharing (requires NVIDIA GPU)
cuda = []

# mDNS/DNS-SD for automatic peer discovery on local networks
mdns = ["mdns-sd"]

