[package]
name = "horus_library"
version = "0.1.9"
edition = "2021"
authors = ["HORUS Contributors"]
description = "Standard library of messages and transforms for HORUS"
license = "Apache-2.0"
repository = "https://github.com/softmata/horus"
keywords = ["robotics", "messages", "horus"]
categories = ["science::robotics"]

[lib]
name = "horus_library"
path = "lib.rs"

[dependencies]
horus_core = { path = "../horus_core" }
horus_macros = { path = "../horus_macros" }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
rmp-serde = "1.1"
bincode = "1.3"
serde_arrays = "0.1"
