[package]
name = "horus_library"
version = "0.1.9"
edition = "2021"
authors = ["HORUS Contributors"]
description = "Standard library of messages and transforms for HORUS"
license = "Apache-2.0"
repository = "https://github.com/softmata/horus"
keywords = ["robotics", "messages", "horus"]
categories = ["science::robotics"]

[lib]
name = "horus_library"
path = "lib.rs"

[dependencies]
horus_core = { path = "../horus_core" }
horus_macros = { path = "../horus_macros" }
softmata-core = { path = "../../softmata-core" }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
rmp-serde = "1.1"
bincode = "1.3"
serde_arrays = "0.1"

[features]
default = []
# Enable blocking wait_for_transform() / wait_for_transform_at() using condvar.
# Zero overhead when disabled — condvar and notification code are compiled out.
wait = []
# Enable async wait_for_transform_async() / wait_for_transform_at_async() using tokio::sync::Notify.
# Pulls in tokio as a dependency. Zero overhead when disabled.
async-wait = ["dep:tokio"]

[dependencies.tokio]
workspace = true
optional = true

[dev-dependencies]
loom = "0.7"
tokio = { workspace = true }
proptest = "1.4"
