[package]
name = "horus_library"
version = "0.2.0"
edition = "2021"
authors = ["HORUS Contributors"]
description = "Standard library of messages and transforms for HORUS — IMU, LiDAR, camera, odometry, control, navigation, and perception message types with TransformFrame coordinate tracking"
license = "Apache-2.0"
repository = "https://gitlab.com/softmata/horus"
homepage = "https://horusrobotics.dev"
documentation = "https://docs.horusrobotics.dev"
keywords = ["robotics", "messages", "sensors", "transforms", "horus"]
categories = ["science::robotics", "data-structures"]

[lints]
workspace = true

[lib]
name = "horus_library"
path = "lib.rs"

[dependencies]
horus_core = { path = "../horus_core" }
horus_macros = { path = "../horus_macros" }
softmata-core = "0.1.2"
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
rmp-serde = "1.1"
bincode = "1.3"
serde_arrays = "0.1"

[features]
default = []
# Enable blocking wait_for_transform() / wait_for_transform_at() using condvar.
# Zero overhead when disabled — condvar and notification code are compiled out.
wait = []
# Enable async wait_for_transform_async() / wait_for_transform_at_async() using tokio::sync::Notify.
# Pulls in tokio as a dependency. Zero overhead when disabled.
async-wait = ["dep:tokio"]
# Enable From impls between softmata-core canonical types and HORUS messages.
softmata-compat = []

[dependencies.tokio]
workspace = true
optional = true

[dev-dependencies]
loom = "0.7"
tokio = { workspace = true }
proptest = "1.4"
