[package]
name = "horus_macros"
version = "0.1.9"
edition = "2021"
description = "Procedural macros for the HORUS robotics framework"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
serde.workspace = true
horus_core = { path = "../horus_core" }