[package]
name = "horus_manager"
version = "0.1.9"
edition = "2021"
description = "Unified manager for the HORUS robotics framework"
authors = ["HORUS Team"]

[lib]
name = "horus_manager"
path = "src/lib.rs"

[[bin]]
name = "horus"
path = "src/main.rs"

[[bin]]
name = "ci_test_node"
path = "src/bin/ci_test_node.rs"


[dependencies]
horus_core = { path = "../horus_core" }
horus_library = { path = "../horus_library" }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "time"] }
serde.workspace = true
serde_json.workspace = true
colored = "2.0"
indicatif = "0.17"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
toml_edit = "0.22"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
tempfile = "3.8"
eframe = "0.24"
egui = "0.24"
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
regex = "1.10"
glob = "0.3"
log = "0.4"
env_logger = "0.11"
open = "5.0"
hostname = "0.4"
semver = "1.0"
libc = "0.2"
lazy_static = "1.4"
rayon = "1.10"
syn = { version = "2.0", features = ["full", "visit"] }
num_cpus = "1.16"

# TUI dependencies
ratatui = "0.30"
crossterm = "0.28"
rand = "0.8"

# Web monitor dependencies
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
webbrowser = "0.8"
futures = "0.3"
qrcode = "0.14"

# Security dependencies
argon2 = "0.5"
base64 = "0.21"
rpassword = "7.3"

# Package signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"

[features]
# ============================================================================
# DEFAULT FEATURES
# ============================================================================
# CLI ships minimal by default. For Zenoh/ROS2: horus pkg install horus-ros2
default = []

# ============================================================================
# OPTIONAL FEATURES
# ============================================================================

# mDNS discovery for local peer finding
mdns = ["horus_core/mdns"]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
assert_cmd = "2.0"
predicates = "3.0"
serde_json.workspace = true
